# lpc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: logging.h
scripts/: build.sh  checkall.sh  checker.py  reorder_imports.py  run.sh  setup.sh  test.sh
src/: context.cppm  core.scm  main.cpp  passes.cpp  passes.cppm  session.cpp  session.cppm
src/analysis/: core_form.cppm  expand.cpp  expand.cppm  mutability.cpp  mutability.cppm  sema.cpp  sema.cppm  transformer.cpp  transformer.cppm
src/backend/interp/: interp.cppm
src/core/: arenas.cpp  arenas.cppm  refs.cppm  span.cppm
src/cps/: ir.cpp  ir.cppm  lower.cpp  lower.cppm  primops.def  simplfy.cppm  simplify.cpp  simplify.cppm
src/frontend/: annonate.cpp  annonate.cppm  arenas.cpp  arenas.cppm  ast.cpp  ast.cppm  builtin.cppm  canonicalize.cpp  canonicalize.cppm  combinators.cpp  combinators.cppm  expand.cpp  expand.cppm  lexer.cpp  lexer.cppm  location.cppm  parser.cpp  parser.cppm  passes.cpp  passes.cppm  refs.cppm  sema.cpp  sema.cppm  semantics.cpp  semantics.cppm  span.cppm  syntax.cpp  syntax.cppm  token.cppm  transformer.cpp  transformer.cppm
src/sema/: builtins.def  core_form.cppm  expand.cpp  expand.cppm  mutability.cpp  mutability.cppm  sema.cpp  sema.cppm  transformer.cpp  transformer.cppm
src/syntax/: arenas.cpp  arenas.cppm  ast.cppm  combinators.cppm  cursor.cpp  cursor.cppm  lexer.cpp  lexer.cppm  parser.cpp  parser.cppm  refs.cppm  span.cppm  token.cppm
src/utils/: arena.cppm  crash_handler.cppm  function_ref.cppm  logging.cpp  logging.cppm  option.cpp  option.cppm  tagged_union.cppm
test/cpp/: .clang-tidy  arena.cpp  tagged_union.cpp
test/cpp/utils/: framework.cppm  macros.hpp
test/scheme/lexer/bad/: sharp.scm  sharp.scm.stderr
test/scheme/lexer/good/: empty.scm
